LaTeX - Fixed lots of little things

--- a/LaTeX/citations.bib
+++ b/LaTeX/citations.bib
@@ -1,28 +1,58 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Niclas Olsson at 2017-05-15 22:41:27 +0200 
+%% Created for Niclas Olsson at 2017-05-15 23:20:28 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@article{NoveltySearch,
+	Author = {Liapis, Antonios and Yannakakis, Georgios N. and Togelius, Julian},
+	Date-Added = {2017-05-15 21:19:35 +0000},
+	Date-Modified = {2017-05-15 21:20:16 +0000},
+	Journal = {Evol. Comput.},
+	Month = {Mars},
+	Number = {1},
+	Pages = {101--129},
+	Title = {Constrained Novelty Search: A Study on Game Content Generation},
+	Volume = {23},
+	Year = {2015}}
+
+@mastersthesis{FloorPlanPCG,
+	Author = {Daniel Bengtsson and Johan Mellin},
+	Date-Added = {2017-05-15 21:13:02 +0000},
+	Date-Modified = {2017-05-15 21:17:14 +0000},
+	School = {Blekinge Institute of Technology},
+	Title = {Constrained procedural floor plan generation for game environments},
+	Year = {2016}}
+
+@webpage{Left4Dead,
+	Date-Added = {2017-05-15 20:59:51 +0000},
+	Date-Modified = {2017-05-15 21:00:10 +0000},
+	Keywords = {Video game},
+	Lastchecked = {2015-05-15},
+	Url = {http://www.l4d.com/}}
+
 @webpage{Batman,
 	Date-Added = {2017-05-15 20:41:18 +0000},
-	Date-Modified = {2017-05-15 20:41:25 +0000},
+	Date-Modified = {2017-05-15 21:00:28 +0000},
+	Keywords = {Video game},
 	Lastchecked = {2015-05-15},
 	Url = {http://rocksteadyltd.com/#arkham-knight}}
 
 @webpage{GTA,
 	Date-Added = {2017-05-15 20:39:40 +0000},
-	Date-Modified = {2017-05-15 20:39:57 +0000},
+	Date-Modified = {2017-05-15 21:00:20 +0000},
+	Keywords = {Video game},
 	Lastchecked = {2015-05-15},
 	Url = {http://www.rockstargames.com/V/}}
 
 @webpage{Kkrieger,
 	Date-Added = {2017-05-15 20:37:53 +0000},
-	Date-Modified = {2017-05-15 20:38:19 +0000},
+	Date-Modified = {2017-05-15 21:00:37 +0000},
+	Keywords = {Video game},
 	Lastchecked = {2017-05-15},
 	Url = {https://web.archive.org/web/20120204065621/http://www.theprodukkt.com/kkrieger}}
 
