--- a/LaTeX/thesis.tex
+++ b/LaTeX/thesis.tex
@@ -78,13 +78,13 @@
 \vspace {7.5cm}
 
 % TITLE
-{\Huge\textbf{Thesis Title\\*[0.25cm]}}
+{\Huge\textbf{Procedural city generation\\*[0.25cm]using Perlin noise}}
 
 \vspace {0.5cm}
 
 % SUBTITLE (if you have one)
 % You should exclude this line, if you don't have a subtitle.
-{\Large\textbf{Thesis Subtitle}}
+%{\Large\textbf{Thesis Subtitle}}
 
 \vspace {3cm}
 
@@ -127,9 +127,10 @@ weeks of full time studies.
 \textbf{Contact Information:} \\
 Author(s): \\
 Niclas Olsson \\
-E-mail: niod12@student.bth.se \\
 Elias Frank \\
-E-mail: elfa14@student.bth.se
+E-mail:\\
+niod12@student.bth.se \\
+elfa14@student.bth.se
 
 \vspace{2cm}
 
