--- a/LaTeX/results.tex
+++ b/LaTeX/results.tex
@@ -1,2 +1,73 @@
 \section{Results}
-These are the results
+
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.6\textwidth]{"Images/OftenPlay"}
+		\caption{Pie chart of how often the participants play games.}
+		\label{fig:pie-chart-often-play}
+	\end{figure}
+
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.6\textwidth]{"Images/UseInGame"}
+		\caption{Pie chart of which cities the participants think could be used in a game.}
+		\label{fig:pie-chart-use-in-game}
+	\end{figure}
+
+	\begin{figure}[h]
+	\begin{subfigure}{0.5\textwidth}
+		\centering
+		\includegraphics[width=0.9\linewidth]{"Images/Ugliest"}
+		\caption{Ugliest cities chart.}
+		\label{fig:pie-chart-ugly}
+	\end{subfigure}
+	\begin{subfigure}{0.5\textwidth}
+		\centering
+		\includegraphics[width=0.9\linewidth]{"Images/Prettiest"}
+		\caption{Prettiest cities chart.}
+		\label{fig:pie-chart-pretty}
+	\end{subfigure}
+	\caption{Pie charts of prettiest and ugliest cities.}
+	\label{fig:pie-chart-ugly-pretty}
+\end{figure}
+
+\begin{figure}[h]
+	\begin{subfigure}{0.5\textwidth}
+		\centering
+		\includegraphics[width=0.9\linewidth]{"Images/LeastNatural"}
+		\caption{Least natural cities chart.}
+		\label{fig:pie-chart-least-natural}
+	\end{subfigure}
+	\begin{subfigure}{0.5\textwidth}
+		\centering
+		\includegraphics[width=0.9\linewidth]{"Images/Natural"}
+		\caption{Natural cities chart.}
+		\label{fig:pie-chart-natural}
+	\end{subfigure}
+	\caption{Pie charts of most and least natural cities.}
+	\label{fig:pie-chart-natural-least-natural}
+\end{figure}
+
+\begin{figure}[h]
+	\begin{subfigure}{0.5\textwidth}
+		\centering
+		\includegraphics[width=0.9\linewidth]{"Images/Random"}
+		\caption{Random cities chart.}
+		\label{fig:pie-chart-least-natural}
+	\end{subfigure}
+	\begin{subfigure}{0.5\textwidth}
+		\centering
+		\includegraphics[width=0.9\linewidth]{"Images/Repetitive"}
+		\caption{Repetitive cities chart.}
+		\label{fig:pie-chart-natural}
+	\end{subfigure}
+	\caption{Pie charts of random and repetitive cities.}
+	\label{fig:pie-chart-natural-least-natural}
+\end{figure}
+
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.6\textwidth]{"Images/RoadNetwork"}
+		\caption{Pie chart of which cities has the best road network.}
+		\label{fig:pie-chart-often-play}
+	\end{figure}
