LaTeX - Fixed the bib

--- a/LaTeX/citations.bib
+++ b/LaTeX/citations.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Niclas Olsson at 2017-05-15 23:20:28 +0200 
+%% Created for Niclas Olsson at 2017-05-15 23:58:14 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -28,33 +28,32 @@
 	Title = {Constrained procedural floor plan generation for game environments},
 	Year = {2016}}
 
-@webpage{Left4Dead,
-	Date-Added = {2017-05-15 20:59:51 +0000},
-	Date-Modified = {2017-05-15 21:00:10 +0000},
-	Keywords = {Video game},
-	Lastchecked = {2015-05-15},
-	Url = {http://www.l4d.com/}}
+@misc{Left4Dead,
+	Author = {{Turtle Rock Studios, Valve Corporation}},
+	Howpublished = {Valve Corporation},
+	Note = {Video Game},
+	Title = {{Left 4 Dead}},
+	Year = {2008}}
 
-@webpage{Batman,
-	Date-Added = {2017-05-15 20:41:18 +0000},
-	Date-Modified = {2017-05-15 21:00:28 +0000},
-	Keywords = {Video game},
-	Lastchecked = {2015-05-15},
-	Url = {http://rocksteadyltd.com/#arkham-knight}}
+@misc{Batman,
+	Author = {{Rocksteady Studios}},
+	Howpublished = {{Warner Bros.}},
+	Note = {Video Game},
+	Title = {{Batman: Arkham City}},
+	Year = {2011}}
+	
+@misc{GTA,
+	Author = {{Rockstar Games}},
+	Howpublished = {{Take-Two Interactive}},
+	Note = {Video Game},
+	Title = {{Grand Theft Auto V}},
+	Year = {2013}}
 
-@webpage{GTA,
-	Date-Added = {2017-05-15 20:39:40 +0000},
-	Date-Modified = {2017-05-15 21:00:20 +0000},
-	Keywords = {Video game},
-	Lastchecked = {2015-05-15},
-	Url = {http://www.rockstargames.com/V/}}
-
-@webpage{Kkrieger,
-	Date-Added = {2017-05-15 20:37:53 +0000},
-	Date-Modified = {2017-05-15 21:00:37 +0000},
-	Keywords = {Video game},
-	Lastchecked = {2017-05-15},
-	Url = {https://web.archive.org/web/20120204065621/http://www.theprodukkt.com/kkrieger}}
+@misc{Kkrieger,
+	Author = {{.theprodukkt}},
+	Note = {Video Game},
+	Title = {.kkrieger},
+	Year = {2004}}
 
 @book{CurvedRoads,
 	Author = {Rahul Sharma},
@@ -63,20 +62,19 @@
 	Title = {Procedural City Generator}}
 
 @webpage{RandCRT,
+	Author={C rand function},
 	Date-Added = {2017-05-13 07:49:26 +0000},
-	Date-Modified = {2017-05-13 07:49:59 +0000},
+	Date-Modified = {2017-05-15 21:57:08 +0000},
 	Lastchecked = {2017-05-13},
-	Note = {C++ Rand function},
+	Note = {Webpage, https://msdn.microsoft.com/en-us/library/398ax69y(v=vs.140).aspx},
 	Url = {https://msdn.microsoft.com/en-us/library/398ax69y(v=vs.140).aspx},
 	Bdsk-Url-1 = {https://msdn.microsoft.com/en-us/library/398ax69y(v=vs.140).aspx}}
 
-@webpage{QtWebpage,
-	Date-Added = {2017-05-11 13:14:29 +0000},
-	Date-Modified = {2017-05-11 13:16:48 +0000},
-	Lastchecked = {2017-05-11},
-	Note = {QT Graphical interface},
-	Url = {https://www.qt.io},
-	Bdsk-Url-1 = {https://www.qt.io}}
+@misc{QtWebpage,
+	Author = {{Qt Editor}},
+	Note = {Webpage},
+	Title = {https://www.qt.io/},
+	Year = {2009}}
 
 @book{TexturingModeling,
 	Author = {{David S. Ebert}},
