LaTeX - tiny work on results

--- a/LaTeX/method.tex
+++ b/LaTeX/method.tex
@@ -162,12 +162,14 @@ To explore the procedural generation of a city, a desktop application was create
 			
 	\subsection*{Perspective}
 	Four pre-selected images of different generated and random cities will be provided to the participant. The images are selected by the researchers. Description of the four images:
-	\begin{itemize}
-		\item Fully PCG city with good choise of generation parameters.
+	\begin{enumerate}
 		\item Fully PCG city with bad choise of generation parameters.
-		\item Districts random but roads and buildings procedurally generated.
-		\item Fully randomly generated city.
-	\end{itemize}
+		\item Fully PCG city with good choise of generation parameters.
+		 generated.
+		 \item Fully randomly generated city.
+		\item Fully PCG city with good choise of generation parameters.
+		\item Districts random but roads and buildings procedurally
+	\end{enumerate}
 			
 	\subsection*{Context}
 	The user study will be conducted in the facilities of Blekinge Institute of Technology (BTH). The participants will be handed a questionnaire explaining what the participant is expected to do. The images of the different cities will also be available. All the material for the participants will be paper(A4). The same questionnaire and images will be available online for participants outside BTH. The objective of this user study is to measure if the participants perceive the implementations generated cities as viable in games. The viability of the procedurally generated cities will be compared to randomly and semi-randomly generated cities. This will be analyzed to examine if Perlin noise is percieved as more viable in games than random.
