--- a/LaTeX/results.tex
+++ b/LaTeX/results.tex
@@ -1,13 +1,22 @@
-\section{Results}
 
-	\begin{figure}
+	The results from the user study and the implementation will be presented here. In order to measure the viability of the cities the following three requirements were set Validity, Determinism, Performance and Flexibility, definitions can be found at \ref{sec:viability}.
+	
+	\section{User study}
+	A user study have been conducted where the participants answered questions about images of procedurally generated cities from the implementation created. The user study aimed to measure the viability the cities have in a game.
+	
+	The user study had 25 participants. The figure \ref{fig:pie-chart-often-play} shows that most participants play games more than once a week, therefore they can be expected to have knowledge about game environments. The city images
+	
+	\subsection{Validity rating}
+		Figure \ref{fig:pie-chart-ugly-pretty} shows that 48\% found \textit{City 3} to be the ugliest city.
+	
+	\begin{figure}[h]
 		\centering
 		\includegraphics[width=0.6\textwidth]{"Images/OftenPlay"}
 		\caption{Pie chart of how often the participants play games.}
 		\label{fig:pie-chart-often-play}
 	\end{figure}
 
-	\begin{figure}
+	\begin{figure}[h]
 		\centering
 		\includegraphics[width=0.6\textwidth]{"Images/UseInGame"}
 		\caption{Pie chart of which cities the participants think could be used in a game.}
@@ -65,9 +74,9 @@
 	\label{fig:pie-chart-natural-least-natural}
 \end{figure}
 
-	\begin{figure}
+	\begin{figure}[h]
 		\centering
 		\includegraphics[width=0.6\textwidth]{"Images/RoadNetwork"}
 		\caption{Pie chart of which cities has the best road network.}
-		\label{fig:pie-chart-often-play}
+		\label{fig:pie-chart-road-network}
 	\end{figure}
