LaTeX - Abstract added, not fully though

--- a/LaTeX/thesis.tex
+++ b/LaTeX/thesis.tex
@@ -157,18 +157,17 @@ SE--371 79 Karlskrona, Sweden    & Fax      & : & +46 455 38 50 57 \\
 \abstract
 \begin{changemargin}{+.5cm}{+.5cm}
 \noindent
-\textbf{Context}. ... \newline
-\textbf{Objectives}. ... \newline
-\textbf{Methods}. ... \newline
-\textbf{Results}. ... \newline
+\textbf{Context}: Procedural content generation is to algorithmically generate content. This has been used in games and is an important tool to create games with massive amounts of content with fewer resources. This may allow small developers to create big worlds which makes the investigation into this area interesting.\newline
+\textbf{Objectives}: The Procedural generation of cities using Perlin noise is explored. The goal is to find out if a procedurally generated city using Perlin noise is viable to use in games. \newline
+\textbf{Methods}: An implementation generating cities using Perlin noise has been created and a user study along with data collection tests the cities viability in games.\newline
+\textbf{Results}: The implementation succeeded with all the technical requirements such as performance and determinism. The user study shows that the cities created are percieved as viable in games. \newline
 \textbf{Conclusions}. ...
 
 \vspace {1cm}
 % You can list 3-4 keywords, maximum 2 of these from the title;
 % starts 1 line below the abstract.
 \noindent
-\textbf{Keywords:} 3--4 keywords, maximum 2 of these from the title, starts 1 line
-below the abstract.
+\textbf{Keywords:} Procedural city generation, Perlin noise, Performance, Game content
 
 \end{changemargin}
 
