Conclusion added to Abstract

--- a/LaTeX/thesis.tex
+++ b/LaTeX/thesis.tex
@@ -157,11 +157,11 @@ SE--371 79 Karlskrona, Sweden    & Fax      & : & +46 455 38 50 57 \\
 \abstract
 \begin{changemargin}{+.5cm}{+.5cm}
 \noindent
-\textbf{Context}: Procedural content generation is to algorithmically generate content. This has been used in games and is an important tool to create games with large amounts of content using fewer resources. This may allow small developers to create big worlds, which makes the investigation into this area interesting.\newline
-\textbf{Objectives}: The Procedural generation of cities using Perlin noise is explored. The goal is to find out if a procedurally generated city using Perlin noise is viable to use in games. \newline
-\textbf{Methods}: An implementation generating cities using Perlin noise has been created and a user study along with data collection tests the cities' viability in games.\newline
-\textbf{Results}: The implementation succeeds with all the technical requirements such as performance and determinism. The user study shows that the cities created are perceived as viable in games. \newline
-\textbf{Conclusions}. ...
+\textbf{Context}. Procedural content generation is to algorithmically generate content. This has been used in games and is an important tool to create games with large amounts of content using fewer resources. This may allow small developers to create big worlds, which makes the investigation into this area interesting.\newline
+\textbf{Objectives}. The Procedural generation of cities using Perlin noise is explored. The goal is to find out if a procedurally generated city using Perlin noise is viable to use in games. \newline
+\textbf{Methods}. An implementation generating cities using Perlin noise has been created and a user study along with data collection tests the cities' viability in games.\newline
+\textbf{Results}. The implementation succeeds with all the technical requirements such as performance and determinism. The user study shows that the cities created are perceived as viable in games. \newline
+\textbf{Conclusions}. The cities generated with the implementation seems to be viable in games. The results show that the generated content are percieved as more viable than random generated cities. Furthermore the generation speed is fast enough to be used in an online setting.
 
 \vspace {1cm}
 % You can list 3-4 keywords, maximum 2 of these from the title;
