LaTeX - Fixed some of Hans feedback

--- a/LaTeX/results.tex
+++ b/LaTeX/results.tex
@@ -1,4 +1,4 @@
-The results from the user study and the implementation will be presented here. In order to measure the viability of the cities the following three requirements were set Validity, Determinism, Performance and Flexibility, definitions can be found at \ref{sec:viability}.
+The results from the user study and the implementation are presented here. In order to measure the viability of the cities the following three requirements were set Validity, Determinism, Performance and Flexibility, definitions can be found at \ref{sec:viability}.
 	
 \section{User study}
 A user study with 25 participants was conducted. The participants answered questions about images of procedurally generated cities from the implementation created. The user study aimed to measure the viability the cities have in a game.
