--- a/LaTeX/thesis.tex
+++ b/LaTeX/thesis.tex
@@ -136,8 +136,8 @@ elfa14@student.bth.se
 
 \noindent
 University advisor: \\
-PhD Hans Tap \\
-Department of XXX
+Hans Tap, PhD \\
+Department of Creative Technologies
 
 
 \vspace*{\fill}
