LaTeX - Changed name of subject groups

--- a/LaTeX/results.tex
+++ b/LaTeX/results.tex
@@ -7,7 +7,7 @@ A user study with 25 participants was conducted. The participants answered quest
 
 % how often do you play?
 \par
-The participants of the user study is divided into three groups: \textit{gamers}, \textit{casual gamers} and \textit{non-gamers}. By dividing the participants into levels of familiarity with games, a stronger case can be made for the validity of their answers. Figure \ref{fig:pie-chart-often-play} shows that most participants play at least once a week, putting them in the group of \textit{gamers}. Not enough participants fell into the group of casual or non-gamers. Their results have been discarded.
+The participants of the user study is divided into three groups: \textit{avid gamers}, \textit{occasional gamers} and \textit{non-gamers}. By dividing the participants into levels of familiarity with games, a stronger case can be made for the validity of their answers. Figure \ref{fig:pie-chart-often-play} shows that most participants play at least once a week, putting them in the group of \textit{avid gamers}. Not enough participants fell into the group of \textit{occasional} or \textit{non-gamers}. Their results have been discarded.
 
 \begin{figure}[h]
 	\centering
