LaTeX - Changed text under new york photograph

--- a/LaTeX/method.tex
+++ b/LaTeX/method.tex
@@ -9,7 +9,7 @@ Most related work focus on one of two things: procedurally generating unique bui
 	\begin{figure}[h]
 		\centering
 		\includegraphics[width=0.9\linewidth]{"Images/new york"}
-		\caption{Aerial photograph of New York from above.}
+		\caption{Aerial photograph of New York.}
 		\label{fig:new-york}
 	\end{figure}
 		
