LaTeX - Some discussion added

--- a/LaTeX/discussion.tex
+++ b/LaTeX/discussion.tex
@@ -1,4 +1,13 @@
 \section{Data and user study analysis}
+	Based on the user study it can be argued that all cities shown are perceived to be viable in games by many, however the study suggest that cities one and three are the least viable as shown in figure \ref{fig:pie-chart-use-in-game}. City one were created with bad parameters on purpose and city three were completely random. Thus, it is not surprising that these cities seem to be perceived as least viable in games.
+	
+	\subsection{City 1}
+		The city generated with bad parameters are the most prevalent in two parts of the user study. As seen in Figure \ref{fig:pie-chart-random} the participants in the study found it the most random city. This was unexpected results as the most random city in reality is city three, the randomly generated city. It can be seen in Figure \ref{fig:pie-chart-least-natural} that this city is by a majority seen as the least natural city. There is limited evidence, but this may show that procedurally generated cities are highly dependent upon their generation parameters. As the bad parameters generated city are peceived as both the most random and the least natural city. This city is also a contender for the ugliest city as illustrated in Figure \ref{fig:pie-chart-ugly}.
+		
+	\subsection{City 2 and 4}
+		Generated with similar parameters but different seeds these two cities should in theory be very similar. These cities were hypothised to be the most viable to use in games since they were created using the full procedural generation pipeline with parameters that was thought to be good. Figure \ref{fig:pie-chart-use-in-game} show that these two cities are perceived as more viable than cities one and three. This was expected but on the contrary city five seems to be even more viable. Hence, it is possible that the generation pipeline is flawed and can be improved upon. As illustrated in Figure \ref{fig:pie-chart-road-network} city four seems to have much better road network than city two. Considering that they were generated with similar parameters but the results diverge to a noticable degree (haps siffror?) it may be the case that some aspects of the cities differs more than expected.
+	\subsection{City 3}
+	\subsection{City 5}
 	
 \section{Implementation analysis}
 The implementation has a number of major limitations. In the interest of overview, a list of limitations that will be discussed is provided below.
